syntax = "proto3";

package freki;

service FrekiService {
    rpc IndexDocument(IndexDocumentRequest) returns (IndexDocumentResponse);
    rpc RetrieveContext(RetrieveContextRequest) returns (RetrieveContextResponse);
}

message IndexDocumentRequest {
    string document_id = 1;
    string content = 2;
    bytes embedding = 3; // Vector embedding
    map<string, string> metadata = 4;
}

message IndexDocumentResponse {
    bool success = 1;
    string message = 2;
}

message RetrieveContextRequest {
    bytes query_embedding = 1;
    uint64 limit = 2;
    string collection_name = 3;
}

message RetrieveContextResponse {
    repeated RetrievedDocument documents = 1;
    repeated float relevance_scores = 2;
}

message RetrievedDocument {
    string id = 1;
    string content = 2;
    map<string, string> metadata = 3;
    float score = 4;
}
